[project]
name = "fact-check"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.13.3",
    "google-api-python-client>=2.163.0",
    "google-generativeai>=0.8.4",
    "openai>=1.65.5",
    "python-dotenv>=1.0.1",
    "requests>=2.32.3",
    "youtube-transcript-api>=0.6.3",
]
